--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@azure/ai-text-analytics": "^5.1.0",
-    "axios": "^1.7.9",
+    "@azure/ai-text-analytics": "5.1.0",
+    "@supabase/supabase-js": "2.49.1",
+    "axios": "1.7.9",
     "cors": "2.8.5",
     "dotenv": "16.4.7",
     "express": "4.21.2",
